--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -19,6 +19,12 @@
             </div>
         </div>
         <div class="main-content">
+            <div class="search-container">
+                <div class="search-input-wrapper">
+                    <span class="material-icons search-icon">search</span>
+                    <input type="text" id="server-search" placeholder="Search servers by name, country, or feature...">
+                </div>
+            </div>
             <div class="server-filters">
                 <button class="filter-button active" data-filter="all">All Servers</button>
                 <button class="filter-button" data-filter="free">Free</button>
