--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,96 +7,118 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <div id="app">
-        <div class="header">
-            <h1>
-                <img src="https://protonvpn.com/favicon.ico" alt="ProtonVPN" height="24" style="vertical-align: middle; margin-right: 8px;">
-                Proton VPN
+    <div id="sign-in-view" class="top-section">
+        <img src="assets/vpn-welcome-image-dark@2x.png" alt="" class="welcome-background">
+        <div class="content">
+            <h1 class="text-center">
+                <img src="assets/vpn-logo.svg" alt="Proton VPN" width="195" height="34">
             </h1>
-            <div class="header-actions">
-                <button id="settings-btn" class="icon-button">
-                    <span class="material-icons">settings</span>
-                </button>
-                <div id="connection-status">
-                    <span class="status-indicator"></span>
-                    <span class="status-text">Disconnected</span>
-                </div>
+            <p class="incentive-paragraph"></p>
+            <div class="text-center">
+                <button class="sign-in-button primary-button">Sign in</button>
+            </div>
+            <p></p>
+            <div class="text-center sign-up-button-box">
+                <button class="sign-up-button secondary-button">Create an account</button>
+            </div>
+            <div class="text-center">
+                <a href="#" class="sign-in-link">Already have a Proton Account?</a>
             </div>
         </div>
-        <div class="main-content">
-            <div class="search-container">
-                <div class="search-input-wrapper">
-                    <span class="material-icons search-icon">search</span>
-                    <input type="text" id="server-search" placeholder="Search servers by name, country, or feature...">
-                </div>
-            </div>
-            <div class="server-filters">
-                <button class="filter-button active" data-filter="all">All Servers</button>
-                <button class="filter-button" data-filter="free">Free</button>
-                <button class="filter-button" data-filter="secure-core">Secure Core</button>
-                <button class="filter-button" data-filter="p2p">P2P</button>
-                <button class="filter-button" data-filter="tor">Tor</button>
-            </div>
-            <div id="server-list" class="server-list">
-                <!-- Server items will be inserted here -->
-            </div>
-            <div class="controls">
-                <button id="connect-btn">Connect</button>
-                <button id="disconnect-btn" style="display: none;">Disconnect</button>
-            </div>
-        </div>
+    </div>
 
-        <div id="settings-panel" class="settings-panel">
-            <div class="settings-header">
-                <h2>Settings</h2>
-                <button id="close-settings" class="icon-button">
-                    <span class="material-icons">close</span>
-                </button>
-            </div>
-            <div class="settings-content">
-                <div class="settings-section">
-                    <h3>Connection</h3>
-                    <label class="setting-item">
-                        <span>Auto-connect on startup</span>
-                        <input type="checkbox" id="setting-auto-connect">
-                    </label>
-                    <label class="setting-item">
-                        <span>Kill Switch</span>
-                        <input type="checkbox" id="setting-kill-switch">
-                    </label>
-                    <label class="setting-item">
-                        <span>Protocol</span>
-                        <select id="setting-protocol">
-                            <option value="udp">UDP (recommended)</option>
-                            <option value="tcp">TCP</option>
-                        </select>
-                    </label>
-                </div>
-                
-                <div class="settings-section">
-                    <h3>DNS Settings</h3>
-                    <label class="setting-item">
-                        <span>Use custom DNS</span>
-                        <input type="checkbox" id="setting-custom-dns">
-                    </label>
-                    <div id="custom-dns-servers" class="setting-subitem" style="display: none;">
-                        <input type="text" id="dns-servers" placeholder="Enter DNS servers (comma-separated)">
+    <div id="main-view" style="display: none;">
+        <div id="app">
+            <div class="header">
+                <h1>
+                    <img src="assets/vpn-logo.svg" alt="ProtonVPN" height="24" style="vertical-align: middle; margin-right: 8px;">
+                    Proton VPN
+                </h1>
+                <div class="header-actions">
+                    <button id="settings-btn" class="icon-button">
+                        <span class="material-icons">settings</span>
+                    </button>
+                    <div id="connection-status">
+                        <span class="status-indicator"></span>
+                        <span class="status-text">Disconnected</span>
                     </div>
                 </div>
+            </div>
+            <div class="main-content">
+                <div class="search-container">
+                    <div class="search-input-wrapper">
+                        <span class="material-icons search-icon">search</span>
+                        <input type="text" id="server-search" placeholder="Search servers by name, country, or feature...">
+                    </div>
+                </div>
+                <div class="server-filters">
+                    <button class="filter-button active" data-filter="all">All Servers</button>
+                    <button class="filter-button" data-filter="free">Free</button>
+                    <button class="filter-button" data-filter="secure-core">Secure Core</button>
+                    <button class="filter-button" data-filter="p2p">P2P</button>
+                    <button class="filter-button" data-filter="tor">Tor</button>
+                </div>
+                <div id="server-list" class="server-list">
+                    <!-- Server items will be inserted here -->
+                </div>
+                <div class="controls">
+                    <button id="connect-btn">Connect</button>
+                    <button id="disconnect-btn" style="display: none;">Disconnect</button>
+                </div>
+            </div>
 
-                <div class="settings-section">
-                    <h3>Split Tunneling</h3>
-                    <label class="setting-item">
-                        <span>Enable Split Tunneling</span>
-                        <input type="checkbox" id="setting-split-tunnel">
-                    </label>
-                    <div id="split-tunnel-config" class="setting-subitem" style="display: none;">
-                        <select id="split-tunnel-mode">
-                            <option value="exclude">Exclude apps from VPN</option>
-                            <option value="include">Only use VPN for selected apps</option>
-                        </select>
-                        <div class="app-list">
-                            <!-- App list will be populated dynamically -->
+            <div id="settings-panel" class="settings-panel">
+                <div class="settings-header">
+                    <h2>Settings</h2>
+                    <button id="close-settings" class="icon-button">
+                        <span class="material-icons">close</span>
+                    </button>
+                </div>
+                <div class="settings-content">
+                    <div class="settings-section">
+                        <h3>Connection</h3>
+                        <label class="setting-item">
+                            <span>Auto-connect on startup</span>
+                            <input type="checkbox" id="setting-auto-connect">
+                        </label>
+                        <label class="setting-item">
+                            <span>Kill Switch</span>
+                            <input type="checkbox" id="setting-kill-switch">
+                        </label>
+                        <label class="setting-item">
+                            <span>Protocol</span>
+                            <select id="setting-protocol">
+                                <option value="udp">UDP (recommended)</option>
+                                <option value="tcp">TCP</option>
+                            </select>
+                        </label>
+                    </div>
+                    
+                    <div class="settings-section">
+                        <h3>DNS Settings</h3>
+                        <label class="setting-item">
+                            <span>Use custom DNS</span>
+                            <input type="checkbox" id="setting-custom-dns">
+                        </label>
+                        <div id="custom-dns-servers" class="setting-subitem" style="display: none;">
+                            <input type="text" id="dns-servers" placeholder="Enter DNS servers (comma-separated)">
+                        </div>
+                    </div>
+
+                    <div class="settings-section">
+                        <h3>Split Tunneling</h3>
+                        <label class="setting-item">
+                            <span>Enable Split Tunneling</span>
+                            <input type="checkbox" id="setting-split-tunnel">
+                        </label>
+                        <div id="split-tunnel-config" class="setting-subitem" style="display: none;">
+                            <select id="split-tunnel-mode">
+                                <option value="exclude">Exclude apps from VPN</option>
+                                <option value="include">Only use VPN for selected apps</option>
+                            </select>
+                            <div class="app-list">
+                                <!-- App list will be populated dynamically -->
+                            </div>
                         </div>
                     </div>
                 </div>
