--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="sign-in-view" class="top-section">
-        <img src="assets/vpn-welcome-image-dark@2x.png" alt="" class="welcome-background">
+        <img src="../assets/vpn-welcome-image-dark@2x.png" alt="" class="welcome-background">
         <div class="content">
             <h1 class="text-center">
-                <img src="assets/vpn-logo.svg" alt="Proton VPN" width="195" height="34">
+                <img src="../assets/vpn-logo.svg" alt="Proton VPN" width="195" height="34">
             </h1>
             <p class="incentive-paragraph"></p>
             <div class="text-center">
@@ -31,7 +31,7 @@
         <div id="app">
             <div class="header">
                 <h1>
-                    <img src="assets/vpn-logo.svg" alt="ProtonVPN" height="24" style="vertical-align: middle; margin-right: 8px;">
+                    <img src="../assets/vpn-logo.svg" alt="ProtonVPN" height="24" style="vertical-align: middle; margin-right: 8px;">
                     Proton VPN
                 </h1>
                 <div class="header-actions">
